@@ -941,6 +941,7 @@ class ShapeOut2(QtWidgets.QMainWindow):
     @QtCore.pyqtSlot()
     def on_quickview_refresh(self):
         """Refresh quickview with the currently shown dataset"""
+        print("REFRESH", self.sender())
         slot_index, filt_index = self.block_matrix.get_quickview_indices()
         if slot_index is not None:
             self.on_quickview_show_dataset(slot_index, filt_index,
@@ -964,6 +965,7 @@ class ShapeOut2(QtWidgets.QMainWindow):
             the one where QuickView is currently set active. If
             False, nothing is changed.
         """
+        print("SHOW", self.sender())
         ds = self.pipeline.get_dataset(slot_index=slot_index,
                                        filt_index=filt_index,
                                        apply_filter=True)
